ci: migrate to java 25 and spring boot 4.x (#72)
* ci: upgrading to java 25  and spring boot 4 using open rewrite

* refactor: java 25 clean up and pom clean up

* ci: new snapshot version updated